--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -210,7 +210,7 @@
             </div> <!-- end of ViewAllApges -->
 
             <!-- viewDinnerOverview -->
-            <div id="viewDinnerOverview">
+            <div id="viewDinnerOverview" style="display: none">
                 <!-- Horizontal middle -->
                 <div class="row" id="overviewBorder">
                     <div class="col-md-2 col-md-offset-1" id"myDinner">
@@ -260,6 +260,7 @@
     <!-- The application JavaScript code -->
     <script src="js/app.js"></script>
     <script src="js/model/dinnerModel.js"></script>
+    <script src="js/view/centralFunctions.js"></script>
     <script src="js/view/viewStartPage.js"></script>
     <script src="js/view/viewAllDishes.js"></script>
     <script src="js/view/viewRecipeDetails.js"></script>
