Changed the col-md-2

--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -47,7 +47,7 @@
                 <div class="row">
                     <!-- Left side of page, same as for recipeView -->
                     <section >
-                        <div class="col-sm-2" id="pageLeft">
+                        <div class="col-md-2" id="pageLeft">
                             <div class="row">
                                 <h3>My Dinner</h3>
                             </div>
@@ -213,10 +213,10 @@
             <div id="viewDinnerOverview" style="display: none">
                 <!-- Horizontal middle -->
                 <div class="row" id="overviewBorder">
-                    <div class="col-md-2 col-md-offset-1" id"myDinner">
+                    <div class="col-md-3 col-md-offset-1" id"myDinner">
                         <h2> My Dinner: 4 </h2>
                     </div>
-                    <div class="col-md-2 col-md-offset-8" id="colBackButton">
+                    <div class="col-md-3 col-md-offset-7" id="colBackButton">
                         <button class="btn" id="backEditButton">Go back and edit dinner</button>
                     </div>
                 </div>
