--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -260,6 +260,7 @@
     <!-- The application JavaScript code -->
     <script src="js/app.js"></script>
     <script src="js/model/dinnerModel.js"></script>
+    <script src="js/view/centralFunctions.js"></script>
     <script src="js/view/viewStartPage.js"></script>
     <script src="js/view/viewAllDishes.js"></script>
     <script src="js/view/viewRecipeDetails.js"></script>
