populating ingredietns list

--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -163,31 +163,13 @@
                         <div class="col-md-4" id="ingredientList">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h3>Ingredients for 4 people</h3>
+                                    <h3 id="headerIngriedients"></h3>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
                                     <table class="table" >
                                         <tbody id="igredientTable">
-                                            <tr>
-                                                <td>2tbs</td>
-                                                <td>olive oil</td>
-                                                <td>SEK</td>
-                                                <td>0.20</td>
-                                            </tr>
-                                            <tr>
-                                                <td>2tbs</td>
-                                                <td>olive oil</td>
-                                                <td>SEK</td>
-                                                <td>0.20</td>
-                                            </tr>
-                                            <tr> 
-                                                <td>2tbs</td>
-                                                <td>olive oil</td>
-                                                <td>SEK</td>
-                                                <td>0.20</td>
-                                            </tr>
                                         </tbody>
                                     </table>
                                 </div>
