--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -152,7 +152,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <p>Lorem impsum...</p>
+                                    <p id = "description">Lorem impsum...</p>
                                 </div>
                             </div>
                         </div>
