viewRecipe there's a total cost there now

--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -182,7 +182,7 @@
                                     <p> Total cost </p>
                                 </div>
                                 <div class="col-md-3" id="costDish">
-                                    <p> 0.00 SEK </p>
+                                    <p id = "totalCostViewDish"> </p>
                                 </div>
                             </div>
                         </div>
