Made pageLeft a little prettier

--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -58,7 +58,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <table class="table">
+                                <table class="table" id="dishTable">
                                     <thead>
                                          <tr>
                                             <th>Dish Name</th>
@@ -74,10 +74,10 @@
                                 </table>
                             </div>
                             <div class="row">
-                                <div class="col-md-6">
+                                <div class="col-md-6" id="leftTotalCost">
                                     <p>Total cost</p>
                                 </div>
-                                <div class="col-md-6" >
+                                <div class="col-md-6" id="leftTotalSek">
                                     <p id="totalSek" >0.00 SEK</p>
                                 </div>
                             </div>
