--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Homelette - Create Dinner</title>
+    <link rel="icon" type="image/png" href="///Users/liza/Documents/Programmeringskurser/DH2641:DH2642%20Interaktionsprogramemring/labb2/interaktionsprogrammering//images/favicon.png" />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
