started on controller

--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -258,6 +258,7 @@
     <script src="js/app.js"></script>
     <script src="js/model/dinnerModel.js"></script>
     <script src="js/view/viewStartPage.js"></script>
+    <script src="js/controllers/startPageController.js"></script>    
     <script src="js/view/viewAllDishes.js"></script>
     <script src="js/view/viewRecipeDetails.js"></script>
     <script src="js/view/viewDinnerOverview.js"></script>
