--- a/AllViewsInOne.html
+++ b/AllViewsInOne.html
@@ -260,7 +260,9 @@
     <script src="js/view/viewStartPage.js"></script>
     <script src="js/controllers/startPageController.js"></script>    
     <script src="js/view/viewAllDishes.js"></script>
+    <script src="js/controllers/allDishesController.js"></script>
     <script src="js/view/viewRecipeDetails.js"></script>
+    <script src="js/controllers/recipeDetailsController.js"></script>
     <script src="js/view/viewDinnerOverview.js"></script>
     <!-- <script src="js/view/exampleViewController.js"></script> -->
 </body>
